--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ body {
   color: var(--white);
 }
 
-/* убрали маркеры */
+/* Убрали маркеры */
 
 .list {
   list-style: none;
@@ -128,6 +128,8 @@ body {
 .header-bg {
   background-color: var(--white);
 }
+
+/* СТИЛИ СТРАНИЦЫ INDEX.HTML */
 
 /* Герой */
 
@@ -208,7 +210,7 @@ body {
   background-color: var(--grey-bg);
 }
 
-/* Подвал */
+/* СТИЛИ СТРАНИЦЫ ПОДВАЛА */
 
 .link-footer-address {
   color: var(--white);
@@ -253,6 +255,7 @@ body {
   border-radius: 4px;
   border-color: var(--grey-bg);
   text-decoration: none;
+  text-transform: capitalize;
 }
 
 .btn:hover,
